Fix shadowJar setup